# modelingLibrary

./: BuildCommands-CADAC_ADS6.py  BuildCommands-CADAC_AIM5.py  BuildCommands-CPP_3DOF_BASE.py  BuildCommands-CPP_3DOF_LINE_OF_ATTACK.py  BuildCommands-CPP_6DOF_SRAAM_V2.py  BuildCommands-cppFunctions.py  README.md
3DOFS/CPP_3DOF_LINE_OF_ATTACK/: CMakeLists.txt  main.cpp  plotMultipleTrajectories.py  run.py  util.h
3DOFS/CPP_3DOF_LINE_OF_ATTACK/output/: flyout_originalMissile.txt
CPP_6DOF_SRAAM_V1/: CMakeLists.txt  build.py  configureAndRun.py  missileModel.cpp
CPP_6DOF_SRAAM_V2/: ATM1976.h  CMakeLists.txt  configureAndRun.py  main.cpp  missileModel.cpp  missileModel.h  secondOrderActuator.cpp  secondOrderActuator.h  util.cpp  util.h
PY_5DOF_AIM/: fiveDofSim.py  log.txt  lookUps.pickle  visual.py
PY_5DOF_MOCK_HELLFIRE/: MockHellfireDYNAMICS5DOF.py  MockHellfireDynFiveDof.py  MockHellfireSIM.py  MockHellfireSim.py  VisualFiveDof.py  visualFiveDof.py
PY_6DOF_70MM_ROCKET/: 70MM_DYN_6DOF.py  TABLES.py
PY_6DOF_SRAAM/: lookUpTables.pickle  sixDofSim.py  visual.py
cppFunctions/: CMakeLists.txt  atm1976_metric.h  atmNASA_imperial.h  global_constants.hpp  global_header.hpp  main.cpp  randomNumbers.cpp  randomNumbers.h  run.py  secondOrderActuator.cpp  secondOrderActuator.h  util.h  utility_functions.cpp  utility_header.hpp
pythonFunctions/: MAE540FinalProject.py  PIDController.py  RK4.py  angles.py  arrayFxns.py  atm1976_metric.py  atmNASA_imperial.py  atm_imperial.py  chargerBlueRocket.py  coordinateTransformations.py  dictFxns.py  earthTransforms.py  filters.py  (+18 more)
(+241 files in other folders)
